<resources>
    <string name="app_name">UnitConverterApp</string>

    <string name="convert">Convert</string>
    <string name="enter_value">Enter value</string>
    <string name="converted_value">Converted Value</string>
    <string name="source_unit_spinner">Source Unit Spinner</string>
    <string name="destination_unit_spinner">Destination Unit Spinner</string>
    <string name="value_input">Value Input</string>
    <string name="convert_units_button">Convert units from source to destination</string>
    <string name="result_text">Result Text</string>
    <string name="unit_category_spinner">Select conversion unit</string>

    <!-- Define an array of length units -->
    <string-array name="length_units">
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>Centimeter</item>
        <item>Kilometer</item>
    </string-array>

    <!-- Define an array of weight units -->
    <string-array name="weight_units">
        <item>Pound</item>
        <item>Ounce</item>
        <item>Ton</item>
        <item>Kilogram</item>
    </string-array>

    <!-- Define an array of temperature units -->
    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <!-- Array for unit categories -->
    <string-array name="unit_categories">
        <item>Length</item>
        <item>Weight</item>
        <item>Temperature</item>
    </string-array>

</resources>
